# tokenkeeper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: pypi-publish.yml  tests.yml
docs/: ARCHITECTURE.md  CAPTURE_MATRIX.md  DEV_LOG.md  PROXY.md
docs/superpowers/plans/: 2026-06-27-tokenkeeper-final-goal.md
examples/: 01_basic_usage.py  demo_for_video.py
scripts/: dashboard_screenshot.py  real_demo.py  real_demo_aliyun.py  real_test_deepseek.py  real_test_minimax_from_env.py  real_test_with_prompt.py  screenshot_dashboard.py  seed_demo_data.py  self_check_ledger.py  test_anthropic_intercept.py  test_auto_intercept.py  validate_pricing.py
tests/: test_anthropic_capture.py  test_basic.py  test_capture.py  test_cli_connect.py  test_cli_dashboard.py  test_dashboard_smoke.py  test_hermes_connector.py  test_integration.py  test_integration_ext.py  test_langchain.py  test_openai_capture.py  test_packaging.py  test_postgres.py  test_proxy.py
tokenkeeper/: __init__.py  _version.py  alerting.py  capture.py  cli.py  core.py  guard.py  ledger.py  logging_config.py  postgres_ledger.py  pricing.py  pricing_data.py
tokenkeeper/dashboard/: app.py
tokenkeeper/integrations/: __init__.py  anthropic.py  hermes_connector.py  hermes_http.py  langchain.py  openai_compat.py
tokenkeeper/proxy/: __init__.py  openai_compat.py
